<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_root"
    android:orientation="vertical">

    <TextView
        android:id="@+id/setting_theme_light"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:text="@string/light_mode"
        android:textColor="@color/gray01" />

    <TextView
        android:id="@+id/setting_theme_dark"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:text="@string/dark_mode"
        android:textColor="@color/gray01" />

    <TextView
        android:id="@+id/setting_theme_default"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:text="@string/system_default"
        android:textColor="@color/gray01" />

</LinearLayout>
